# uvk

./: .flake8  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.MD  Makefile  README.md  banner.py  mkdocs.yml  pyproject.toml
data/share/jupyter/kernels/uvk/: kernel.json
docs/: Tutorial.ipynb  about.md  index.md  install.md  license.md  style.css  tutorial.ipynb
docs/deepdives/: index.md
docs/howto/: configuring-uv-environment-variables.md  index.md  notebook-easiest-to-share.md  uvk-multiple-pythons.md  uvk-with-nbconvert.md
docs/reference/: cli.md  ext.ipynb  index.md  uvk_cli.md  uvk_ext.md
src/test/: __init__.py  _test_uv_active.py  test_ext.py  test_hello.py  test_install.py  test_launch.py  test_main.py  test_parse.py  test_uv_active.py
src/test/notebooks/: bad_toml.ipynb  editor_metadata.ipynb  last_cell_with_uv_args.ipynb  metadata_after_raw_cell.ipynb  metadata_in_raw_cell.ipynb  metadata_multiple.ipynb  metadata_multiple_top_broken.ipynb  metadata_multiple_top_skipped.ipynb  metadata_unparsable.ipynb  no_dependency_311.ipynb  no_metadata.ipynb  typical.ipynb
src/uvk/: __init__.py  __main__.py  _parse.py  install.py  launch.py  parse.py  util.py
