[build-system]
requires = ["uv_build>=0.10.2"]
build-backend = "uv_build"

[project]
name = "uvk"
version = "0.2"
authors = [{name = "Benoit Hamelin", email = "benoit.hamelin@gmail.com"}]
maintainers = [{name = "Benoit Hamelin", email = "benoit.hamelin@gmail.com"}]
description = "Fully isolated IPython kernels based on uv"
readme = "README.md"
keywords = ["jupyter", "kernel", "ipython", "ipykernel", "uv"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Framework :: IPython",
    "Framework :: Jupyter",
]
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.0.0",
    "jupyter-core>=5.9.1",
    "packaging>=26.0",
    "psutil>=7.2.2",
    "uv>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/hamelin/uvk"

[project.scripts]
uvk = "uvk.__main__:main"

[project.optional-dependencies]
docs = [
    "ipython-pygments-lexers>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-jupyter>=0.26.3",
]

[tool.setuptools]
zip-safe = true
include-package-data = true
packages = ["uvk"]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
proto = [
    "ipython>=9.10.0",
    "jupyterlab>=4.5.4",
]
